리뷰 페이지 완성!!!!!!
내일은 공지사항~

--- a/src/main/resources/templates/admin/notice.html
+++ b/src/main/resources/templates/admin/notice.html
@@ -220,6 +220,6 @@
     
   </section>
  
-  <script src="/js/admin/faq.js"></script>
+  <script src="/js/admin/notice.js"></script>
 </body>
 </html>
