--- a/src/main/resources/templates/myPage/preference.html
+++ b/src/main/resources/templates/myPage/preference.html
@@ -11,6 +11,18 @@
 
 <body>
   <header th:replace="~{common/common}"></header>
+  <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
+    <symbol id="x-circle-fill" viewBox="0 0 16 16">
+      <path
+        d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z" />
+    </symbol>
+  </svg>
+  <div class="btn-container gap-1">
+    <button id="allLoad" class="btn btn-secondary mt-3 col-5">전부 불러오기</button>
+    <button id="allsave" class="btn btn-primary mt-3 col-5">전부 저장하기</button>
+    <button id="allPlus" class="btn btn-success mt-3 col-5">전부 담기</button>
+    <button id="allMinus" class="btn btn-danger mt-3 col-5">전부 빼기</button>
+  </div>
 
   <main>
     <section class="content-box">
@@ -44,14 +56,21 @@
         </h3>
       </div>
 
+
       <div class="category-container container mt-3 mb-3 pb-3 pt-3 bg-light rounded shadow">
         <div class="row mb-3">
           <div class="col-12">
-            <div class="card">
+            <div class="card sticky-card max-width">
               <div class="card-header">
-                <h5>내 카테고리</h5>
+                <h5 style="font-weight: bold;">내 카테고리</h5>
+                <div class="d-flex flex-wrap gap-2 col-12 ">
+                  <button id="saveCategory" class="btn btn-primary mt-3">저장하기</button>
+                  <button id="loadCategory" class="btn btn-secondary mt-3">불러오기</button>
+                  <button id="plusCategory" class="btn btn-success mt-3">전부 담기</button>
+                  <button id="mainusCategory" class="btn btn-danger mt-3">전부 빼기</button>
+                </div>
               </div>
-              <div class="card-body">
+              <div class="card-body gap-1 py-5">
                 <p class="card-text">내가 관심있는 카테고리를 설정할 수 있습니다.</p>
               </div>
             </div>
@@ -63,11 +82,13 @@
           <div class="col-12">
             <div class="card">
               <div class="card-header">
-                <h5>관심 있는 카테고리를 선택해주세요</h5>
+                <h5 style="font-weight: bold;">관심 있는 카테고리를 선택해주세요</h5>
               </div>
-              <div class="card-body">
-                <button class="btn btn-light mb-1 me-3 col-3 category fa-solid fa-check"
-                  th:each="category : ${categoryList}" th:value="${category.categoryName}" th:text="${category.categoryName}">
+              <div class="card-body py-1 d-flex flex-wrap justify-content-center">
+                <button
+                  class="btn btn-light h-100 p-3 mt-3 mb-3 me-3 offset-8 col-4 preference d-flex align-items-center justify-content-center"
+                  style="font-size: 20px; white-space: nowrap;" th:each="category : ${categoryList}"
+                  th:value="${category.categoryName}" th:text="${category.categoryName}">
                 </button>
               </div>
             </div>
@@ -78,12 +99,18 @@
       <div class="preference-container container mt-3 mb-3 pb-3 pt-3 me-5 bg-light rounded shadow">
         <div class="row mb-3">
           <div class="col-12">
-            <div class="card">
+            <div class="card sticky-card">
               <div class="card-header">
-                <h5>내 취향</h5>
+                <h5 style="font-weight: bold;">내 취향</h5>
+                <div class="d-flex flex-wrap gap-2 col-12">
+                  <button id="savePreference" class="btn btn-primary mt-3">저장하기</button>
+                  <button id="loadPreference" class="btn btn-secondary mt-3">불러오기</button>
+                  <button id="plusPreference" class="btn btn-success mt-3">전부 담기</button>
+                  <button id="mainusPreference" class="btn btn-danger mt-3">전부 빼기</button>
+                </div>
               </div>
-              <div class="card-body">
-                <p class="card-text">내가 관심있는 선택지를 설정할 수 있습니다.</p>
+              <div class="card-body gap-2 py-5">
+                <p class="card-text">내가 관심있는 테마를 설정할 수 있습니다.</p>
               </div>
             </div>
             <div>
@@ -94,11 +121,13 @@
           <div class="col-12">
             <div class="card">
               <div class="card-header">
-                <h5>관심 있는 선택지를 선택해주세요</h5>
+                <h5 style="font-weight: bold;">관심 있는 테마를 선택해주세요</h5>
               </div>
-              <div class="card-body">
-                <button class="btn btn-light mb-1 me-3 col-3 preference fa-solid fa-check"
-                  th:each="preference : ${preferenceList}" th:value="${preference.preferenceName}" th:text="${preference.preferenceName}">
+              <div class="card-body py-1 d-flex flex-wrap justify-content-center">
+                <button
+                class="btn btn-light h-100 p-3 mt-3 mb-3 me-3 offset-8 col-4 preference d-flex align-items-center justify-content-center"
+                style="font-size: 20px; white-space: nowrap;" th:each="preference : ${preferenceList}"
+                  th:value="${preference.preferenceName}" th:text="${preference.preferenceName}">
                 </button>
               </div>
             </div>
@@ -106,15 +135,8 @@
         </div>
       </div>
     </section>
-
-
-
-
-
-
-
   </main>
-
+  <div style="height: 20px;"></div>
   <footer th:replace="~{common/footer :: footer}"></footer>
   <script src="/js/myPage/preference.js"></script>
   <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
