공지사항 기본 형태 완성 / 문의내역 상세조회까지 가능한데, 상세조회 페이지 수정,삭제 구현 필요// 문의글 작성에서 빈칸일 경우 제출 못하게 막기 성공

--- a/src/main/resources/templates/customer/inquiry.html
+++ b/src/main/resources/templates/customer/inquiry.html
@@ -117,7 +117,7 @@
                     
                     <!-- 보고있지 않은 페이지 -->                    
                     <li th:unless = "${i} == *{currentPage}">
-                      <a href="#" th:text="${i}">이동할 수 있는 페이지</a>
+                      <a th:text="${i}">이동할 수 있는 페이지</a>
                     </li>
                     
                     
