--- a/src/main/resources/templates/customer/inquiryDetail.html
+++ b/src/main/resources/templates/customer/inquiryDetail.html
@@ -28,6 +28,12 @@
             <span>마지막 수정일</span>
             <th:block th:text="*{queryUpdateDate}"></th:block>
           </p>
+
+          <p>
+            <span>내용</span>
+            <th:block th:text="*{queryContent}"></th:block>
+          </p>
+          
         </div>
       </div>
   </main>
