--- a/src/main/resources/templates/customer/notice.html
+++ b/src/main/resources/templates/customer/notice.html
@@ -1,13 +1,108 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>공지사항</title>
+  <link rel="stylesheet" href="/css/customer/notice.css">
 </head>
+
 <body>
+  <header th:replace="~{common/common}"></header>
+  <div th:replace="~{common/side-menu}"></div>
   <main>
-    <h1>앙 공지띠</h1>
+    <h1>공지사항</h1>
+    <section class="notice-container">
+      <div class="notice-list">
+        <table class="notice-table">
+          <thead>
+            <tr>
+              <th>글번호</th>
+              <th>제목</th>
+              <th>작성일</th>
+              <th>조회수</th>
+            </tr>
+          </thead>
+
+          <tbody id="noticeTbBody">
+            <th:block th:if="${#lists.isEmpty(noticeList)}">
+              <!-- 공지사항이 없을 때 -->
+              <tr>
+                <td colspan="4">작성된 공지사항이 없습니다.</td>
+              </tr>
+            </th:block>
+          
+            <!-- 공지사항이 있을 때 -->
+            <th:block th:unless="${#lists.isEmpty(noticeList)}">
+              <tr th:each="notice : ${noticeList}" th:object="${notice}">
+                <td th:text="*{noticeId}">글번호</td>
+          
+                <!-- 제목을 클릭하면 상세 페이지로 이동 -->
+                <td>
+                  <a th:href="@{/customer/noticeDetail/{id}(id=*{noticeId})}"
+                     th:text="*{title}" class="noticeName">
+                    제목
+                  </a>
+                </td>
+          
+                <td th:text="*{createDate}">2024-11-21</td>
+                <td th:text="*{view}">2147483647</td>
+              </tr>
+            </th:block>
+          </tbody>
+          
+        </table>
+      </div>
+
+      <div class="notice-content">
+      </div>
+
+      <!-- 게시글이 있을 때만 페이지네이션이 보이게 할 예정 -->
+      <div class="pagination-area" th:unless="${#lists.isEmpty(boardList)}">
+
+        <ul class="pagination" th:object="${pagination}">
+
+          <!-- 첫 페이지로 이동 -->
+          <li><a href="#">&lt;&lt;</a></li>
+
+          <!-- 이전 목록 마지막 번호로 이동 -->
+          <li><a href="#">&lt;</a></li>
+
+          <!-- 특정 페이지로 이동 -->
+
+
+          <!-- 
+            #numbers.sequence(startPage, endPage)
+            -> startPage 부터 endPage까지 1씩 증가하는 숫자를 가진
+               List를 만들어서 반환
+          -->
+          <th:block th:each="i : *{#numbers.sequence(startPage, endPage)}">
+
+            <!-- 현재 보고있는 페이지 -->
+            <li th:if="${i} == *{currentPage}">
+              <a class="current" th:text="${i}">현재 페이지</a>
+            </li>
+
+            <!-- 보고있지 않은 페이지 -->
+            <li th:unless="${i} == *{currentPage}">
+              <a href="#" th:text="${i}">이동할 수 있는 페이지</a>
+            </li>
+
+          </th:block>
+
+
+          <!-- 다음 목록 시작 번호로 이동 -->
+          <li><a href="#">&gt;</a></li>
+
+          <!-- 끝 페이지로 이동 -->
+          <li><a href="#">&gt;&gt;</a></li>
+        </ul>
+      </div>
+    </section>
   </main>
+  <script src="/js/customer/notice.js"></script>
+  <div th:replace="~{common/footer}"></div>
 </body>
+
 </html>
